--- a/index.html
+++ b/index.html
@@ -15,14 +15,8 @@
 
     <header>
       <div class="container">
-        <h1>DnD</h1>
-        <h2></h2>
-
-        <section id="downloads">
-          <a href="https://github.com/ariejan/dnd/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/ariejan/dnd/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/ariejan/dnd" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
+        <h1>Dungeons and Dragons</h1>
+        <h2>Characters & Backgrounds</h2>
       </div>
     </header>
 
