Different description for the great evil
Why stop at a dragon? You’re fighting the TRUE evil behind it all. It.
Is. Your. Destiny!

--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
         </p>
 
         <p>
-          When in trance, Quinthya sometimes sees flashes of this unknown, great evil. A monstrous dragon, made of
-          metal and cables, with tracks for feet.
-          The dragon is fiercly fighting a small person and Quinthya has come to realize this person is her.
+          When in trance, Quinthya sometimes sees flashes of this unknown, great evil. An army stands before an enourmous vessel,
+          a flying ship, made of metal with four large tentacles on the front and six smaller legs aft.
+          While the ships fires beams of light that destroys everything in its path, a small person charges to the front to challenge
+          it. Quinthya has come to realize that this person, this person is her.
         </p>
 
         <p>
